--- a/ds/courses/deep-learning-v2-pytorch/intro-neural-networks/intro_to_nn_notes_1.ipynb
+++ b/ds/courses/deep-learning-v2-pytorch/intro-neural-networks/intro_to_nn_notes_1.ipynb
@@ -44,9 +44,17 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
-     "text": "Nice!  You got it all correct.\n\n Input 1    Input 2    Linear Combination    Activation Output   Is Correct\n       0          0                  -2.0                    0          Yes\n       0          1                  -1.0                    0          Yes\n       1          0                  -1.0                    0          Yes\n       1          1                   0.0                    1          Yes\n"
+     "output_type": "stream",
+     "text": [
+      "Nice!  You got it all correct.\n",
+      "\n",
+      " Input 1    Input 2    Linear Combination    Activation Output   Is Correct\n",
+      "       0          0                  -2.0                    0          Yes\n",
+      "       0          1                  -1.0                    0          Yes\n",
+      "       1          0                  -1.0                    0          Yes\n",
+      "       1          1                   0.0                    1          Yes\n"
+     ]
     }
    ],
    "source": [
@@ -123,9 +131,427 @@
     "    print('You got {} wrong.  Keep trying!\\n'.format(num_wrong))\n",
     "print(output_frame.to_string(index=False))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "\n",
+    "## Gradient Descent"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# === Implementing Gradient Descent - data_prep.py === #\n",
+    "\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "admissions = pd.read_csv('binary.csv')\n",
+    "\n",
+    "# Make dummy variables for rank\n",
+    "data = pd.concat([admissions, pd.get_dummies(admissions['rank'], prefix='rank')], axis=1)\n",
+    "data = data.drop('rank', axis=1)\n",
+    "\n",
+    "# Standarize features\n",
+    "for field in ['gre', 'gpa']:\n",
+    "    mean, std = data[field].mean(), data[field].std()\n",
+    "    data.loc[:,field] = (data[field]-mean)/std\n",
+    "    \n",
+    "# Split off random 10% of the data for testing\n",
+    "np.random.seed(42)\n",
+    "sample = np.random.choice(data.index, size=int(len(data)*0.9), replace=False)\n",
+    "data, test_data = data.ix[sample], data.drop(sample)\n",
+    "\n",
+    "# Split into features and targets\n",
+    "features, targets = data.drop('admit', axis=1), data['admit']\n",
+    "features_test, targets_test = test_data.drop('admit', axis=1), test_data['admit']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# === Implementing Gradient Descent - gradient.py === #\n",
+    "\n",
+    "import numpy as np\n",
+    "from data_prep import features, targets, features_test, targets_test\n",
+    "\n",
+    "\n",
+    "def sigmoid(x):\n",
+    "    \"\"\"\n",
+    "    Calculate sigmoid\n",
+    "    \"\"\"\n",
+    "    return 1 / (1 + np.exp(-x))\n",
+    "\n",
+    "# TODO: We haven't provided the sigmoid_prime function like we did in\n",
+    "#       the previous lesson to encourage you to come up with a more\n",
+    "#       efficient solution. If you need a hint, check out the comments\n",
+    "#       in solution.py from the previous lecture.\n",
+    "\n",
+    "# Use to same seed to make debugging easier\n",
+    "np.random.seed(42)\n",
+    "\n",
+    "n_records, n_features = features.shape\n",
+    "last_loss = None\n",
+    "\n",
+    "# Initialize weights\n",
+    "weights = np.random.normal(scale=1 / n_features**.5, size=n_features)\n",
+    "\n",
+    "# Neural Network hyperparameters\n",
+    "epochs = 1000\n",
+    "learnrate = 0.5\n",
+    "\n",
+    "for e in range(epochs):\n",
+    "    del_w = np.zeros(weights.shape)\n",
+    "    for x, y in zip(features.values, targets):\n",
+    "        # Loop through all records, x is the input, y is the target\n",
+    "\n",
+    "        # Note: We haven't included the h variable from the previous\n",
+    "        #       lesson. You can add it if you want, or you can calculate\n",
+    "        #       the h together with the output\n",
+    "\n",
+    "        # Calculate the output\n",
+    "        output = sigmoid(np.dot(x, weights))\n",
+    "\n",
+    "        # Calculate the error\n",
+    "        # error = y * np.log(output) - (1 - y) * np.log(1 - output)\n",
+    "        error = y - output\n",
+    "\n",
+    "        # Calculate the error term\n",
+    "        #   Notice we calulate f'(h) here instead of defining a separate\n",
+    "        #   sigmoid_prime function. This just makes it faster because we\n",
+    "        #   can re-use the result of the sigmoid function stored in\n",
+    "        #   the output variable\n",
+    "        error_term = (y - output) * output * (1 - output)\n",
+    "\n",
+    "        # TODO: Calculate the change in weights for this sample\n",
+    "        #       and add it to the total weight change\n",
+    "        del_w += error_term * x\n",
+    "\n",
+    "    # TODO: Update weights using the learning rate and the average change in weights\n",
+    "    weights += learnrate * del_w / n_records\n",
+    "\n",
+    "    # Printing out the mean square error on the training set\n",
+    "    if e % (epochs / 10) == 0:\n",
+    "        out = sigmoid(np.dot(features, weights))\n",
+    "        loss = np.mean((out - targets) ** 2)\n",
+    "        if last_loss and last_loss < loss:\n",
+    "            print(\"Train loss: \", loss, \"  WARNING - Loss Increasing\")\n",
+    "        else:\n",
+    "            print(\"Train loss: \", loss)\n",
+    "        last_loss = loss\n",
+    "\n",
+    "\n",
+    "# Calculate accuracy on test data\n",
+    "tes_out = sigmoid(np.dot(features_test, weights))\n",
+    "predictions = tes_out > 0.5\n",
+    "accuracy = np.mean(predictions == targets_test)\n",
+    "print(\"Prediction accuracy: {:.3f}\".format(accuracy))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "\n",
+    "### Multilayer perceptrons"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# === Initialize weights with numpy === #\n",
+    "import numpy as np\n",
+    "\n",
+    "# Number of records and input units\n",
+    "features = np.array([[0.49671415, -0.1382643 ,  0.64768854]]).T\n",
+    "n_records, n_inputs = features.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.49671415],\n",
+       "       [-0.1382643 ],\n",
+       "       [ 0.64768854]])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Number of hidden units\n",
+    "n_hidden = 2\n",
+    "weights_input_to_hidden = np.random.normal(0, n_inputs ** -0.5, size=(n_inputs, n_hidden))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Multiply the inputs (row vector) by the weights\n",
+    "# dot product of the inputs with each column in the weights matrix\n",
+    "hidden_inputs = np.dot(inputs, weights_input_to_hidden)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Other method of making a column vector out of a row vector\n",
+    "features[:, None]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> Implement a forward pass through a 4x3x2 network with sigmoid activation functions for both layers\n",
+    "\n",
+    "1. Calculate input to the hidden layer\n",
+    "2. Calculate output from hidden layer\n",
+    "3. Calculate input to the output layer\n",
+    "4. Calculate the output of the network"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hidden-layer Output:\n",
+      "[0.41492192 0.42604313 0.5002434 ]\n",
+      "Output-layer Output:\n",
+      "[0.49815196 0.48539772]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "def sigmoid(x):\n",
+    "    \"\"\"Calculate sigmoid\"\"\"\n",
+    "    return 1/(1+np.exp(-x))\n",
+    "\n",
+    "# Network size\n",
+    "N_input = 4\n",
+    "N_hidden = 3\n",
+    "N_output = 2\n",
+    "\n",
+    "np.random.seed(42)\n",
+    "# Make some fake data\n",
+    "X = np.random.randn(4)\n",
+    "\n",
+    "weights_input_to_hidden = np.random.normal(0, scale=0.1, size=(N_input, N_hidden))\n",
+    "weights_hidden_to_output = np.random.normal(0, scale=0.1, size=(N_hidden, N_output))\n",
+    "\n",
+    "# TODO: Make a forward pass through the network\n",
+    "\n",
+    "# Multiply inputs by weights\n",
+    "hidden_layer_in = np.dot(X, weights_input_to_hidden)\n",
+    "hidden_layer_out = sigmoid(hidden_layer_in)\n",
+    "\n",
+    "print('Hidden-layer Output:')\n",
+    "print(hidden_layer_out)\n",
+    "\n",
+    "output_layer_in = np.dot(hidden_layer_out, weights_hidden_to_output)\n",
+    "output_layer_out = sigmoid(output_layer_in)\n",
+    "\n",
+    "print('Output-layer Output:')\n",
+    "print(output_layer_out)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "\n",
+    "## Backpropagation\n",
+    "\n",
+    "> Implement the code to calculate one backpropagation update step for two sets of weights.\n",
+    "\n",
+    "1. Calculate the network's output error\n",
+    "2. Calculate the output layer's error term\n",
+    "3. Use backpropagation to calculate the hidden layer's error term\n",
+    "4. Calculate change in weights that result from propagating the errors back through the network"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "\n",
+    "def sigmoid(x):\n",
+    "    \"\"\"\n",
+    "    Calculate sigmoid\n",
+    "    \"\"\"\n",
+    "    return 1 / (1 + np.exp(-x))\n",
+    "\n",
+    "\n",
+    "x = np.array([0.5, 0.1, -0.2])\n",
+    "target = 0.6\n",
+    "learnrate = 0.5\n",
+    "\n",
+    "weights_input_hidden = np.array([[0.5, -0.6],\n",
+    "                                 [0.1, -0.2],\n",
+    "                                 [0.1, 0.7]])\n",
+    "\n",
+    "weights_hidden_output = np.array([0.1, -0.3])\n",
+    "\n",
+    "## Forward pass\n",
+    "hidden_layer_input = np.dot(x, weights_input_hidden)\n",
+    "hidden_layer_output = sigmoid(hidden_layer_input)\n",
+    "\n",
+    "output_layer_in = np.dot(hidden_layer_output, weights_hidden_output)\n",
+    "output = sigmoid(output_layer_in)\n",
+    "\n",
+    "## Backwards pass\n",
+    "## TODO: Calculate output error\n",
+    "error = None\n",
+    "\n",
+    "# TODO: Calculate error term for output layer\n",
+    "output_error_term = None\n",
+    "\n",
+    "# TODO: Calculate error term for hidden layer\n",
+    "hidden_error_term = None\n",
+    "\n",
+    "# TODO: Calculate change in weights for hidden layer to output layer\n",
+    "delta_w_h_o = None\n",
+    "\n",
+    "# TODO: Calculate change in weights for input layer to hidden layer\n",
+    "delta_w_i_h = None\n",
+    "\n",
+    "print('Change in weights for hidden layer to output layer:')\n",
+    "print(delta_w_h_o)\n",
+    "print('Change in weights for input layer to hidden layer:')\n",
+    "print(delta_w_i_h)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3.7.6 64-bit ('vela': pipenv)",
+   "language": "python",
+   "name": "python37664bitvelapipenvde09592071074af6a70ce3b1ce38af95"
+  },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
@@ -136,14 +562,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6-final"
-  },
-  "orig_nbformat": 2,
-  "kernelspec": {
-   "name": "python37664bitvelapipenvde09592071074af6a70ce3b1ce38af95",
-   "display_name": "Python 3.7.6 64-bit ('vela': pipenv)"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
