Finished contains duplicate

--- a/cs/lambda_cs/08_interview_prep/notes/20-04-27-151-681-mon.md
+++ b/cs/lambda_cs/08_interview_prep/notes/20-04-27-151-681-mon.md
@@ -134,12 +134,59 @@ anyone wants to work ahead, etc.
 * [Find the Duplicate Number](https://leetcode.com/problems/find-the-duplicate-number/)
 * [Search Rotated Sorted Arr](https://leetcode.com/problems/search-in-rotated-sorted-array/)
 
+## Behavioral interview practice
 
+1. Tell me a little bit about yourself
 
+Jack of many trades, master of some. I love a good technical problem or project to dig
+my teeth into and a good philosophical conversation to shake things up. I was homeschooled
+until 7th grade, which gave me a deep appreciation for self-directed learning and a
+belief that learning is a life-long endeavor.
 
+> Talk about educational + professional experience
 
+* Economics in college (Excel, data analysis and visualization, predictive modeling)
+* Software consultant at IQMS (Project, team, and expectations management, SQL)
 
+2. What kind of work environment are you looking for?
 
+* Relatively flexible and informal rules and culture
+* Collaborative
+  * Across disciplines and seniority levels
+
+3. What are your strengths and weaknesses as a developer?
+
+When I get into a project or topic that I find interesting, I will put everything into
+it. This is both a strength and a weakness. I believe it to be a strength because I will
+exhaust all options when solving a problem, or go all-in on learning a new topic or
+skill.
+
+"Your patience is of legend." -Philip, 2020
+
+It can also be a weakness at times when I get too far into the weeds or
+find it difficult to let things go unsolved.
+
+4. Tell me about a group project that you are passionate about?
+
+Trash Panda
+
+* Team: 11 total, 4 DS/ML
+* Object detection for waste items -> how to dispose of them properly
+* Built and managed a data pipeline to gather and annotate 80k images
+* Implemented a pre-trained image segmentation model to automate labeling
+* Trained a YOLOv3 computer vision / object detection model using 80k images
+* Deployed a Flask API using Docker on AWS Elastic Beanstalk
+
+5. Where do you see yourself in 3-5 years?
+
+I would like to be managing a small team on a larger project that's conducting research
+and/or developing products on the cutting edge of machine / deep learning, exploring how
+the cutting edge can be used to benefit society writ large.
+
+## Technical interview practice
+
+1. LeetCode: Contains Duplicates
+2. LeetCode: Add Two Numbers (Linked List)
 
 
 
