Finished the backpropagation implementation

--- a/ds/courses/deep-learning-v2-pytorch/intro-neural-networks/intro_to_nn_notes_1.ipynb
+++ b/ds/courses/deep-learning-v2-pytorch/intro-neural-networks/intro_to_nn_notes_1.ipynb
@@ -426,9 +426,16 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
-     "text": "Change in weights for hidden layer to output layer:\n[0.00804047 0.00555918]\nChange in weights for input layer to hidden layer:\n[[ 1.77005547e-04 -5.11178506e-04]\n [ 3.54011093e-05 -1.02235701e-04]\n [-7.08022187e-05  2.04471402e-04]]\n"
+     "output_type": "stream",
+     "text": [
+      "Change in weights for hidden layer to output layer:\n",
+      "[0.00804047 0.00555918]\n",
+      "Change in weights for input layer to hidden layer:\n",
+      "[[ 1.77005547e-04 -5.11178506e-04]\n",
+      " [ 3.54011093e-05 -1.02235701e-04]\n",
+      " [-7.08022187e-05  2.04471402e-04]]\n"
+     ]
     }
    ],
    "source": [
@@ -490,9 +497,12 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
-     "text": "0.028730669543515018\n[ 0.00070802 -0.00204471]\n"
+     "output_type": "stream",
+     "text": [
+      "0.028730669543515018\n",
+      "[ 0.00070802 -0.00204471]\n"
+     ]
     }
    ],
    "source": [
@@ -506,12 +516,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
-      "text/plain": "array([ 0.00070802, -0.00204471])"
+      "text/plain": [
+       "array([ 0.00070802, -0.00204471])"
+      ]
      },
+     "execution_count": 20,
      "metadata": {},
-     "execution_count": 20
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -525,12 +537,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
-      "text/plain": "array([0.00804047, 0.00555918])"
+      "text/plain": [
+       "array([0.00804047, 0.00555918])"
+      ]
      },
+     "execution_count": 21,
      "metadata": {},
-     "execution_count": 21
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -544,12 +558,16 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
-      "text/plain": "array([[ 1.77005547e-04, -5.11178506e-04],\n       [ 3.54011093e-05, -1.02235701e-04],\n       [-7.08022187e-05,  2.04471402e-04]])"
+      "text/plain": [
+       "array([[ 1.77005547e-04, -5.11178506e-04],\n",
+       "       [ 3.54011093e-05, -1.02235701e-04],\n",
+       "       [-7.08022187e-05,  2.04471402e-04]])"
+      ]
      },
+     "execution_count": 22,
      "metadata": {},
-     "execution_count": 22
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -574,22 +592,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "error",
-     "ename": "AttributeError",
-     "evalue": "'DataFrame' object has no attribute 'ix'",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-30-aca72b0920af>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrandom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mseed\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m21\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m \u001b[0msample\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrandom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mchoice\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msize\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0;36m0.9\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mreplace\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 20\u001b[0;31m \u001b[0mdata\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtest_data\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mix\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0msample\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdrop\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msample\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     21\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m \u001b[0;31m# Split into features and targets\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/.vega/vela-_qIiF1eP/lib/python3.7/site-packages/pandas/core/generic.py\u001b[0m in \u001b[0;36m__getattr__\u001b[0;34m(self, name)\u001b[0m\n\u001b[1;32m   5272\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_info_axis\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_can_hold_identifiers_and_holds_name\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   5273\u001b[0m                 \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 5274\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mobject\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__getattribute__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   5275\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   5276\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__setattr__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m->\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'DataFrame' object has no attribute 'ix'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# === data_prep.py === #\n",
     "import numpy as np\n",
@@ -610,7 +615,7 @@
     "# Split off random 10% of the data for testing\n",
     "np.random.seed(21)\n",
     "sample = np.random.choice(data.index, size=int(len(data)*0.9), replace=False)\n",
-    "data, test_data = data.ix[sample], data.drop(sample)\n",
+    "data, test_data = data.iloc[sample], data.drop(sample)\n",
     "\n",
     "# Split into features and targets\n",
     "features, targets = data.drop('admit', axis=1), data['admit']\n",
@@ -619,9 +624,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(360, 4)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(360, 3)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "features.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train loss:  0.24118192880283867\n",
+      "Train loss:  0.24062575601203856\n",
+      "Train loss:  0.2400814383582655\n",
+      "Train loss:  0.23954853271352386\n",
+      "Train loss:  0.2390266287606974\n",
+      "Train loss:  0.23851534658239512\n",
+      "Train loss:  0.23801433439211203\n",
+      "Train loss:  0.23752326640053162\n",
+      "Train loss:  0.2370418408101549\n",
+      "Train loss:  0.23656977793179068\n",
+      "Prediction accuracy: 0.650\n"
+     ]
+    }
+   ],
    "source": [
     "# === backprop.py === #\n",
     "# import numpy as np\n",
@@ -630,11 +693,8 @@
     "np.random.seed(21)\n",
     "\n",
     "def sigmoid(x):\n",
-    "    \"\"\"\n",
-    "    Calculate sigmoid\n",
-    "    \"\"\"\n",
+    "    \"\"\"Calculate sigmoid\"\"\"\n",
     "    return 1 / (1 + np.exp(-x))\n",
-    "\n",
     "\n",
     "# Hyperparameters\n",
     "n_hidden = 2  # number of hidden units\n",
@@ -653,34 +713,36 @@
     "    del_w_input_hidden = np.zeros(weights_input_hidden.shape)\n",
     "    del_w_hidden_output = np.zeros(weights_hidden_output.shape)\n",
     "    for x, y in zip(features.values, targets):\n",
-    "        ## Forward pass ##\n",
+    "        # === Forward pass === #\n",
     "        # TODO: Calculate the output\n",
-    "        hidden_input = None\n",
-    "        hidden_output = None\n",
-    "        output = None\n",
+    "        hidden_input = np.dot(x, weights_input_hidden)\n",
+    "        hidden_output = sigmoid(hidden_input)\n",
+    "        \n",
+    "        output_input = np.dot(hidden_output, weights_hidden_output)\n",
+    "        output = sigmoid(output_input)\n",
     "\n",
-    "        ## Backward pass ##\n",
+    "        # === Backward pass === #\n",
     "        # TODO: Calculate the network's prediction error\n",
-    "        error = None\n",
+    "        error = y - output\n",
     "\n",
     "        # TODO: Calculate error term for the output unit\n",
-    "        output_error_term = None\n",
+    "        output_error_term = error * output * (1 - output)\n",
     "\n",
-    "        ## propagate errors to hidden layer\n",
+    "        ## Propagate errors to hidden layer\n",
     "\n",
     "        # TODO: Calculate the hidden layer's contribution to the error\n",
-    "        hidden_error = None\n",
+    "        hidden_error = np.dot(output_error_term, weights_hidden_output)\n",
     "        \n",
     "        # TODO: Calculate the error term for the hidden layer\n",
-    "        hidden_error_term = None\n",
+    "        hidden_error_term = hidden_error * hidden_output * (1 - hidden_output)\n",
     "        \n",
     "        # TODO: Update the change in weights\n",
-    "        del_w_hidden_output += 0\n",
-    "        del_w_input_hidden += 0\n",
+    "        del_w_hidden_output += output_error_term * hidden_output\n",
+    "        del_w_input_hidden += hidden_error_term * x[:, None]\n",
     "\n",
     "    # TODO: Update weights  (don't forget to division by n_records or number of samples)\n",
-    "    weights_input_hidden += 0\n",
-    "    weights_hidden_output += 0\n",
+    "    weights_input_hidden +=  (learnrate * del_w_input_hidden) / features.shape[0]\n",
+    "    weights_hidden_output += (learnrate * del_w_hidden_output) / features.shape[0]\n",
     "\n",
     "    # Printing out the mean square error on the training set\n",
     "    if e % (epochs / 10) == 0:\n",
@@ -700,15 +762,30 @@
     "out = sigmoid(np.dot(hidden, weights_hidden_output))\n",
     "predictions = out > 0.5\n",
     "accuracy = np.mean(predictions == targets_test)\n",
-    "print(\"Prediction accuracy: {:.3f}\".format(accuracy))\n"
+    "print(\"Prediction accuracy: {:.3f}\".format(accuracy))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-0.03000454, -0.06420119],\n",
+       "       [ 0.60147895, -0.725581  ],\n",
+       "       [ 0.43036219, -0.98787204]])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "weights_input_hidden"
+   ]
   },
   {
    "cell_type": "code",
@@ -748,7 +825,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6-final"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
