Some daily practice after SC

--- a/ds/interview_prep/practice/template_daily_ds_practice.ipynb
+++ b/ds/interview_prep/practice/template_daily_ds_practice.ipynb
@@ -6,30 +6,24 @@
    "source": [
     "# 20-XX-XX: Daily Data Practice\n",
     "\n",
-    "* Daily Practices\n",
-    "  * Meta Data: Review and write\n",
-    "    * Focus on a topic, review notes and resources, write a blog post about it\n",
-    "  * HackerRank SQL or Packt SQL Data Analytics\n",
-    "  * Practice with the common DS/ML tools and processes\n",
-    "    * Try to hit benchmark accuracies with [UCI ML datasets](https://archive.ics.uci.edu/ml/index.php)\n",
-    "    * Hands-on ML with sklearn, Keras, and TensorFlow\n",
-    "    * Kaggle\n",
-    "  * Interviewing\n",
-    "    * \"Tell me a bit about yourself\"\n",
-    "    * \"Tell me about a project you've worked on and are proud of\"\n",
-    "    * Business case walk-throughs\n",
-    "    * Hot-seat DS-related topics for recall practice (under pressure)\n",
-    "  * Job sourcing\n",
-    "    * LinkedIn"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "---\n",
     "\n",
-    "## [DATE]"
+    "### Daily Practices\n",
+    "\n",
+    "* Meta Data: Review and write\n",
+    "  * Focus on a topic, review notes and resources, write a blog post about it\n",
+    "* HackerRank SQL or Packt SQL Data Analytics\n",
+    "* Practice with the common DS/ML tools and processes\n",
+    "  * Try to hit benchmark accuracies with [UCI ML datasets](https://archive.ics.uci.edu/ml/index.php)\n",
+    "  * Hands-on ML with sklearn, Keras, and TensorFlow\n",
+    "  * Kaggle\n",
+    "* Interviewing\n",
+    "  * \"Tell me a bit about yourself\"\n",
+    "  * \"Tell me about a project you've worked on and are proud of\"\n",
+    "  * Business case walk-throughs\n",
+    "  * Hot-seat DS-related topics for recall practice (under pressure)\n",
+    "* Job sourcing\n",
+    "  * LinkedIn"
    ]
   },
   {
