Hands-on ML and fast.ai

--- a/ds/interview_prep/practice/template_daily_ds_practice.ipynb
+++ b/ds/interview_prep/practice/template_daily_ds_practice.ipynb
@@ -16,6 +16,9 @@
     "* Practice with the common DS/ML tools and processes\n",
     "  * Try to hit benchmark accuracies with [UCI ML datasets](https://archive.ics.uci.edu/ml/index.php)\n",
     "  * Hands-on ML with sklearn, Keras, and TensorFlow\n",
+    "    * Read, code along, take notes\n",
+    "    * _test yourself on the concepts_ — i.e. do all the chapter exercises\n",
+    "  * [fast.ai course](https://course.fast.ai/)\n",
     "  * Kaggle\n",
     "* Interviewing\n",
     "  * \"Tell me a bit about yourself\"\n",
