Review and practice - started sprint challenges

--- a/ds/interview_prep/notes/study_guide_tk.ipynb
+++ b/ds/interview_prep/notes/study_guide_tk.ipynb
@@ -33,16 +33,7 @@
     "\n",
     "### 1. Data Wrangling and Storytelling\n",
     "\n",
-    "Exploratory Data Analysis (EDA)\n",
-    "\n",
-    "* Use basic Pandas functions for EDA\n",
-    "* Generate basic graphs with Pandas\n",
-    "\n",
-    "Make Features\n",
-    "\n",
-    "* The purpose of feature engineering\n",
-    "* Modify or create features using `df.apply()`\n",
-    "* Work with dates and times in Pandas\n",
+    "[Unit-1-Sprint-1-Data-Wrangling-and-Storytelling](https://github.com/LambdaSchool/DS-Unit-1-Sprint-1-Data-Wrangling-and-Storytelling)\n",
     "\n",
     "Join and Reshape Data\n",
     "\n",
@@ -68,6 +59,8 @@
     "---\n",
     "\n",
     "### 2. Statistical Tests and Experiments\n",
+    "\n",
+    "[Unit-1-Sprint-2-Statistics](https://github.com/LambdaSchool/DS-Unit-1-Sprint-2-Statistics)\n",
     "\n",
     "Probability, Statistics, and Inference\n",
     "\n",
@@ -103,6 +96,8 @@
     "---\n",
     "\n",
     "### 3. Linear Algebra\n",
+    "\n",
+    "[Unit-1-Sprint-3-Linear-Algebra](https://github.com/LambdaSchool/DS-Unit-1-Sprint-3-Linear-Algebra)\n",
     "\n",
     "Vectors and Matrices\n",
     "\n",
@@ -178,6 +173,8 @@
     "\n",
     "### 1. Linear Models\n",
     "\n",
+    "[Ds-Unit-2-Linear-Models](https://github.com/LambdaSchool/DS-Unit-2-Linear-Models)\n",
+    "\n",
     "Regression 1\n",
     "\n",
     "* Begin with baselines for regression\n",
@@ -212,6 +209,8 @@
     "---\n",
     "\n",
     "### 2. Kaggle Challenge\n",
+    "\n",
+    "[DS-Unit-2-Kaggle-Challenge](https://github.com/LambdaSchool/DS-Unit-2-Kaggle-Challenge)\n",
     "\n",
     "Decision Trees\n",
     "\n",
@@ -248,6 +247,8 @@
     "---\n",
     "\n",
     "### 3. Applied Modeling\n",
+    "\n",
+    "[DS-Unit-2-Applied-Modeling](https://github.com/LambdaSchool/DS-Unit-2-Applied-Modeling)\n",
     "\n",
     "Define ML Problems\n",
     "\n",
@@ -322,6 +323,8 @@
     "\n",
     "### 1. Natural Language Processing\n",
     "\n",
+    "[DS-Unit-4-Sprint-1-NLP](https://github.com/LambdaSchool/DS-Unit-4-Sprint-1-NLP)\n",
+    "\n",
     "Introduction to NLP\n",
     "\n",
     "* Tokenize text\n",
@@ -355,6 +358,8 @@
     "\n",
     "### 2. Neural Network Foundations\n",
     "\n",
+    "[DS-Unit-4-Sprint-2-Neural-Networks](https://github.com/LambdaSchool/DS-Unit-4-Sprint-2-Neural-Networks)\n",
+    "\n",
     "Perceptrons\n",
     "\n",
     "* Understand what a perceptron is and how it works\n",
@@ -375,6 +380,8 @@
     "---\n",
     "\n",
     "### 3. Major Neural Network Architectures\n",
+    "\n",
+    "[DS-Unit-4-Sprint-3-Deep-Learning](https://github.com/LambdaSchool/DS-Unit-4-Sprint-3-Deep-Learning)\n",
     "\n",
     "Recurrent Neural Networks and LSTM\n",
     "\n",
