--- a/ds/interview_prep/practice/20-05-06-ds_practice.ipynb
+++ b/ds/interview_prep/practice/20-05-06-ds_practice.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 20-XX-XX: Daily Data Practice\n",
+    "# 20-05-06: Daily Data Practice\n",
     "\n",
     "---\n",
     "\n",
