--- a/ds/interview_prep/practice/20-05-07-ds_practice.ipynb
+++ b/ds/interview_prep/practice/20-05-07-ds_practice.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 20-XX-XX: Daily Data Practice\n",
+    "# 20-05-07: Daily Data Practice\n",
     "\n",
     "---\n",
     "\n",
@@ -13,23 +13,160 @@
     "* Practice with the common DS/ML tools and processes\n",
     "  * HackerRank SQL or Packt SQL Data Analytics\n",
     "  * Try to hit benchmark accuracies with [UCI ML datasets](https://archive.ics.uci.edu/ml/index.php)\n",
-    "  * Kaggle\n",
     "  * Hands-on ML with sklearn, Keras, and TensorFlow\n",
     "    * Read, code along, take notes\n",
     "    * _test yourself on the concepts_ — i.e. do all the chapter exercises\n",
     "  * [fast.ai course](https://course.fast.ai/)\n",
-    "  * Packt Workshops\n",
+    "  * Kaggle\n",
     "* Interviewing\n",
-    "  * Behavioral questions and scenarios\n",
+    "  * Behavioral / scenario\n",
     "  * Business case walk-throughs\n",
     "  * Hot-seat DS-related topics for recall practice (under pressure)\n",
     "* Meta Data: Review and write\n",
     "  * Focus on a topic, review notes and resources, write a blog post about it\n",
     "* Job sourcing\n",
-    "  * Networking\n",
     "  * LinkedIn\n",
     "  * Indeed"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "\n",
+    "### Training Kit Review\n",
+    "\n",
+    "Unit 1\n",
+    "\n",
+    "* Merge, join, concatenate dataframes\n",
+    "* Tidy Data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "\n",
+    "### Interviewing\n",
+    "\n",
+    "> Practice answering the most common interview questions\n",
+    "\n",
+    "Technical\n",
+    "\n",
+    "* Business case walk-throughs\n",
+    "* Hot-seat DS-related topics for recall practice (under pressure)\n",
+    "\n",
+    "Behavioral\n",
+    "\n",
+    "* \"Tell me a bit about yourself\"\n",
+    "* \"Tell me about a project you've worked on and are proud of\"\n",
+    "* \"What do you know about our company?\"\n",
+    "* \"Where do you see yourself in 3-5 years?\"\n",
+    "* \"Why do you want to work here / want this job?\"\n",
+    "* \"What makes you most qualified for this role?\"\n",
+    "* \"What is your greatest strength/weakness?\"\n",
+    "  * \"What is your greatest technical strength?\"\n",
+    "* \"Tell me about a time when you had conflict with someone and how you handled it\"\n",
+    "* \"Tell me about a mistake you made and how you handled it\"\n",
+    "* \"Do you have any questions for me?\"\n",
+    "  * What is your favorite aspect of working here?\n",
+    "  * What has your journey looked like at the company?\n",
+    "  * What are some challenges you face in your position?\n",
+    "* Scenario questions (STAR: situation, task, action, result)\n",
+    "  * Success story / biggest accomplishment\n",
+    "  * Greatest challenge (overcome)\n",
+    "  * Persuaded someone who did not agree with you\n",
+    "  * Dealt with and resolved a conflict (among team members)\n",
+    "  * Led a team / showed leadership skills or aptitude\n",
+    "  * How you've dealt with stress / stressful situations\n",
+    "  * Most difficult problem encountered in previous job; how you solved it\n",
+    "  * Solved a problem creatively\n",
+    "  * Exceeded expectations to get a job done\n",
+    "  * Showed initiative\n",
+    "  * Something that's not on your resume\n",
+    "  * Example of important goal you set and how you reached it\n",
+    "  * A time you failed"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Technical interview practice\n",
+    "\n",
+    "> Questions for others:\n",
+    "\n",
+    "Unit 1\n",
+    "\n",
+    "* Q: What are the rules that define tidy data?\n",
+    "  * Each variable is a column\n",
+    "  * Each observation is a row\n",
+    "\n",
+    "Unit 2\n",
+    "\n",
+    "* Q: What does it mean to one-hot encode a variable? How does that differ from ordinal encoding?\n",
+    "  * One-hot: each category of the variable gets its own column containing a 1 when that particular category is present in an observation\n",
+    "  * Ordinal: categorical variable -> single numeric column; each category getting an integer; best for when there is some true order to the categories\n",
+    "* Q: What is the difference between precision and recall? When can/should they be used?\n",
+    "  * \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Group Discussion\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Talk about a dataset you've worked with"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -100,58 +237,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "---\n",
-    "\n",
-    "### Interviewing\n",
-    "\n",
-    "> Practice answering the most common interview questions\n",
-    "\n",
-    "Technical\n",
-    "\n",
-    "* Business case walk-throughs\n",
-    "* Hot-seat DS-related topics for recall practice (under pressure)\n",
-    "\n",
-    "Behavioral\n",
-    "\n",
-    "* \"Tell me a bit about yourself\"\n",
-    "* \"Tell me about a project you've worked on and are proud of\"\n",
-    "* \"What do you know about our company?\"\n",
-    "* \"Where do you see yourself in 3-5 years?\"\n",
-    "* \"Why do you want to work here / want this job?\"\n",
-    "* \"What makes you most qualified for this role?\"\n",
-    "* \"What is your greatest strength/weakness?\"\n",
-    "  * \"What is your greatest technical strength?\"\n",
-    "* \"Tell me about a time when you had conflict with someone and how you handled it\"\n",
-    "* \"Tell me about a mistake you made and how you handled it\"\n",
-    "* \"Do you have any questions for me?\"\n",
-    "  * What is your favorite aspect of working here?\n",
-    "  * What has your journey looked like at the company?\n",
-    "  * What are some challenges you face in your position?\n",
-    "* Scenario questions (STAR: situation, task, action, result)\n",
-    "  * Success story / biggest accomplishment\n",
-    "  * Greatest challenge (overcome)\n",
-    "  * Persuaded someone who did not agree with you\n",
-    "  * Dealt with and resolved a conflict (among team members)\n",
-    "  * Led a team / showed leadership skills or aptitude\n",
-    "  * How you've dealt with stress / stressful situations\n",
-    "  * Most difficult problem encountered in previous job; how you solved it\n",
-    "  * Solved a problem creatively\n",
-    "  * Exceeded expectations to get a job done\n",
-    "  * Showed initiative\n",
-    "  * Something that's not on your resume\n",
-    "  * Example of important goal you set and how you reached it\n",
-    "  * A time you failed"
-   ]
   },
   {
    "cell_type": "markdown",
