Start of endorsement week 3

--- a/ds/interview_prep/practice/daily_ds_practice/20-05-18-ds_practice.ipynb
+++ b/ds/interview_prep/practice/daily_ds_practice/20-05-18-ds_practice.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 20-XX-XX: Daily Data Practice\n",
+    "# 20-05-18: Daily Data Practice\n",
     "\n",
     "---\n",
     "\n",
@@ -30,39 +30,6 @@
     "  * LinkedIn\n",
     "  * Indeed"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "---\n",
-    "\n",
-    "## Writing\n",
-    "\n",
-    "> Focus on a topic or project, learn/review the concepts, and write a blog post about it\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "---\n",
-    "\n",
-    "## SQL\n",
-    "\n",
-    "> Work through practice problems on HackerRank or Packt"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -99,7 +66,78 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "---\n",
+    "\n",
+    "## Reading: Data Science From Scratch"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Chapter 6: Probability\n",
+    "\n",
+    "* Probability is a way of quantifying the uncertainty associated with certain events out of some set of events.\n",
+    "* (In)Dependence\n",
+    "  * Two events are dependent if knowing A happened provides information on the likelihood of B happening\n",
+    "* Conditional Probability\n",
+    "* Bayes' Theorem ([3B1B](https://youtu.be/HZGCoVF3YvM))\n",
+    "  * A way of reversing conditional probabilities\n",
+    "\n",
+    "> I'll come back to this later on"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "\n",
+    "## Review / Practice\n",
+    "\n",
+    "Starting back at Unit 1, Sprint (2 or 3) - Statistics, and going through assignments and lecture notebooks."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 132: Sampling Confidence Intervals\n",
+    "\n",
+    "T-test assumptions\n",
+    "\n",
+    "* Independence of means\n",
+    "* Homogeneity of variance\n",
+    "* Dependence variable (sample means) are distributed normally\n",
+    "\n",
+    "*Central Limit Theorem*: the distribution of sample means becomes more normal as n increases.\n",
+    "\n",
+    "Relationship bw confidence intervals and t-tests\n",
+    "\n",
+    "* Confidence interval is the boundary of statistical significance for our t-test\n",
+    "  * Sample mean falls inside the confidence interval, we will Fail to Reject the null hypothesis\n",
+    "  * Sample mean falls outside the confidence interval, we will Reject the null hypothesis\n",
+    "\n",
+    "[StatQuest: Confidence Intervals](https://youtu.be/TqOeMYtOc1w)\n",
+    "\n",
+    "* Bootstrapping: estimating the sampling distribution of a statistic or of model parameters\n",
+    "  * Draw additional samples from the sample itself, with replacement\n",
+    "  * Recalculate the statistic or model for each resample\n",
+    "* A 95% confidence interval covers 95% of the bootstrapped sample means"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "\n",
+    "## Writing\n",
+    "\n",
+    "> Focus on a topic or project, learn/review the concepts, and write a blog post about it\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -151,6 +189,22 @@
     "  * Something that's not on your resume\n",
     "  * Example of important goal you set and how you reached it\n",
     "  * A time you failed"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "\n",
+    "## SQL\n",
+    "\n",
+    "> Work through practice problems on HackerRank or Packt"
    ]
   },
   {
