--- a/ds/interview_prep/resources/ds_interview_study_guide.ipynb
+++ b/ds/interview_prep/resources/ds_interview_study_guide.ipynb
@@ -265,7 +265,9 @@
     "\n",
     "### Numpy\n",
     "\n",
-    "### Scikit-learn"
+    "### Scikit-learn\n",
+    "\n",
+    "### TensorFlow"
    ]
   },
   {
