--- a/ds/interview_prep/practice/print-fiction/print_fiction_2-03_modeling.ipynb
+++ b/ds/interview_prep/practice/print-fiction/print_fiction_2-03_modeling.ipynb
@@ -547,11 +547,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 821,  578],\n",
+       "       [ 515, 1021]])"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# === Baseline confusion matrix === #\n"
+    "# === Baseline confusion matrix === #\n",
+    "confusion_matrix(y_val, y_pred_base)"
    ]
   },
   {
